# mulcan

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  meson.build  vk_error_log.txt
blo/: CMakeLists.txt  main.cpp
include/: buffer_manager.hpp  camera.hpp  common_types.hpp  components.hpp  descriptor.hpp  frameresource.hpp  mulcan.hpp  mulcan_errors.hpp  mulcan_infos.hpp  mulkan_macros.hpp  pipeline.hpp
include/utils/: shaders.hpp
shaders/: cube-f.frag  cube-v.spv  cube-v.vert
src/: buffer_manager.cpp  camera.cpp  descriptor.cpp  mulcan.cpp  mulcan_errors.cpp  mulcan_infos.cpp  mulkan.cpp  pipeline.cpp
src/utils/: shaders.hpp
tests/: main.cpp
